--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.6",
@@ -18,7 +19,7 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "^0.71.8",
     "react-native-gesture-handler": "^2.10.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.3",
